gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/ice21060c/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:14ecdca67c6c36f6c6d9933cc64e6bd5c7af5aa843a7853d13f8574dc2560c38
size 26
